# Astra

./: .env  .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml  requirements.txt
ai/: client.py  commands.py  models.py
core/: __init__.py  banner.py  command_router.py  config.py  repl.py  shell.py  themes.py
data/: config.backup.json  history.txt
plugins/: __init__.py  api.py  calc.py  chat.py  hello.py  time.py  weather.py
