[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astra-repl"
version = "0.7.0"
description = "Modern Python REPL with plugins, aliases, sessions and AI support"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Umidjon Mamadjanov" }
]

license = { text = "MIT" }

keywords = [
    "python",
    "repl",
    "shell",
    "terminal",
    "cli",
    "astra"
]

dependencies = [
    "prompt_toolkit",
    "rich",
    "pygments",
    "requests",
    "python-dotenv"
]

[project.urls]
Homepage = "https://github.com/TechFox-AI/Astra"
Repository = "https://github.com/TechFox-AI/Astra"
Issues = "https://github.com/TechFox-AI/Astra/issues"

[project.scripts]
astra = "main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "ai*",
    "core*",
    "plugins*"
]